[tool.poetry]
name = "Bank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
random2 = "^1.0.1"
logging = "^0.4.9"
psycopg2 = "^2.9.1"
config = "^0.5.0"
threading2 = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
